@@ -2940,6 +2940,21 @@
       </description>
     </function>
 
+    <function name="mreverse" section="matshape" output="matrix">
+      <fnargs>
+	<fnarg type="matrix">X</fnarg>
+	<fnarg optional="true" type="scalar">c</fnarg>
+      </fnargs>
+      <description>
+	<para>
+	  If the second argument is omitted, or is zero, returns a matrix
+	  containing the rows of <argname>X</argname> in reverse order.  If
+	  <argname>c</argname> is non-zero, returns a matrix containing the
+	  columns of <argname>X</argname> in reverse order.
+	</para>
+      </description>
+    </function>    
+
     <function name="mshape" section="matshape" output="matrix">
       <fnargs>
 	<fnarg type="matrix">X</fnarg>
